--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1009,6 +1009,14 @@ section {
         position: static;
         margin-top: 30px;
     }
+    .imgserv {
+        width: 100% !important;
+        padding-right: 0px !important;
+        margin-bottom: 20px;
+    }
+    .iconmod {
+        text-align: center;
+    }
 }
 
 
