--- a/Ortognatica - Dr. Jhosepher Previati_files/post-820.css
+++ b/Ortognatica - Dr. Jhosepher Previati_files/post-820.css
@@ -135,7 +135,7 @@
 
 .elementor-820 .elementor-element.elementor-element-cad32c3:not(.elementor-motion-effects-element-type-background),
 .elementor-820 .elementor-element.elementor-element-cad32c3>.elementor-motion-effects-container>.elementor-motion-effects-layer {
-    background-image: url("https://drromulofischer.com/wp-content/uploads/2021/12/Hero.png");
+    background-image: url("../assets/img/capa.png");
     background-position: center left;
     background-repeat: no-repeat;
     background-size: cover;
