--- a/Ortognatica - Dr. Jhosepher Previati_files/post-820.css
+++ b/Ortognatica - Dr. Jhosepher Previati_files/post-820.css
@@ -732,7 +732,7 @@ body.rtl .elementor-820 .elementor-element.elementor-element-4074b41 {
 .elementor-820 .elementor-element.elementor-element-675aefe>.elementor-widget-container {
     margin: 0px 80px 0px 80px;
     padding: 14px 16px 01px 16px;
-    background-color: #f4e4cc;
+    background-color: #b7860f;
 }
 
 .elementor-820 .elementor-element.elementor-element-4524967 {
@@ -1728,7 +1728,7 @@ body.rtl .elementor-820 .elementor-element.elementor-element-964845d.elementor-t
 }
 
 .elementor-820 .elementor-element.elementor-element-35f34c4 .elementor-heading-title {
-    color: #8C400B;
+    color: #0a2332;
     font-family: "Montserrat", Sans-serif;
     font-size: 2.1em;
     font-weight: 600;
@@ -1737,21 +1737,21 @@ body.rtl .elementor-820 .elementor-element.elementor-element-964845d.elementor-t
 
 .elementor-820 .elementor-element.elementor-element-35f34c4>.elementor-widget-container {
     padding: 6% 5% 5% 5%;
-    background-color: #f4e4cc;
+    background-color: #c9a44b;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-toggle-title,
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-toggle-icon {
-    color: #8C400B;
+    color: #0a2332;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-toggle-icon svg {
-    fill: #8C400B;
+    fill: #0a2332;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-title.elementor-active a,
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-title.elementor-active .elementor-toggle-icon {
-    color: #f4e4cc;
+    color: #9ea4a8;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-toggle-title {
@@ -1761,19 +1761,19 @@ body.rtl .elementor-820 .elementor-element.elementor-element-964845d.elementor-t
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-title .elementor-toggle-icon i:before {
-    color: #8C400B;
+    color: #0a2332;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-title .elementor-toggle-icon svg {
-    fill: #8C400B;
+    fill: #0a2332;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-title.elementor-active .elementor-toggle-icon i:before {
-    color: #f4e4cc;
+    color: #9ea4a8;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-title.elementor-active .elementor-toggle-icon svg {
-    fill: #f4e4cc;
+    fill: #9ea4a8;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-toggle-icon.elementor-toggle-icon-left {
@@ -1786,7 +1786,7 @@ body.rtl .elementor-820 .elementor-element.elementor-element-964845d.elementor-t
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5 .elementor-tab-content {
     background-color: #F6F6F6;
-    color: #8C400B;
+    color: #0a2332;
 }
 
 .elementor-820 .elementor-element.elementor-element-d0f58a5>.elementor-widget-container {
